# compdata-dags

./: README.md  compdata-dags.cabal  stack.yaml  upload-doc
.stack-work/: stack.sqlite3
.stack-work/ghci/a49c6196/: cabal_macros.h
.stack-work/install/x86_64-linux-tinfo6/67ef945a0db982664be91e6d097e601f5a4d2b314062179a46e0b29bc0f8732a/8.10.7/doc/compdata-dags-0.2.1/: LICENSE
.stack-work/install/x86_64-linux-tinfo6/67ef945a0db982664be91e6d097e601f5a4d2b314062179a46e0b29bc0f8732a/8.10.7/lib/x86_64-linux-ghc-8.10.7/compdata-0.12.2-7YXWLw7vo6B6BmmEviu11P/Data/: Comp.dyn_hi
.stack-work/install/x86_64-linux-tinfo6/67ef945a0db982664be91e6d097e601f5a4d2b314062179a46e0b29bc0f8732a/8.10.7/pkgdb/: compdata-0.12.2-7YXWLw7vo6B6BmmEviu11P.conf  compdata-dags-0.2.1-LXjusawotV14iFiwsDZBwU.conf  package.cache
examples/Examples/: Circuit.hs  LeavesBelow.hs  Repmin.hs  RepminPAG.hs  TypeInference.hs  Types.hs
examples/Examples/Multi/: LeavesBelow.hs  Repmin.hs  Types.hs
src/Data/Comp/: AG.hs  Dag.hs  PAG.hs
src/Data/Comp/AG/: Dag.hs  Internal.hs  Term.hs
src/Data/Comp/Dag/: AG.hs  Internal.hs  PAG.hs
src/Data/Comp/Multi/: AG.hs  Dag.hs  PAG.hs
src/Data/Comp/Multi/AG/: Internal.hs
src/Data/Comp/Multi/Dag/: .AG.hs.swp  AG.hs  Internal.hs  PAG.hs
src/Data/Comp/Multi/PAG/: Internal.hs
src/Data/Comp/PAG/: Internal.hs
tests/: RunTests.hs
tests/Test/: Dag.hs  Examples.hs  Utils.hs
tests/Test/Multi/: Dag.hs  Examples.hs  Utils.hs
(+4 files in other folders)
